# timewaster

./: Cargo.toml  README.md  timewaster.py
.cargo/: config.toml
src/: main.rs
