[package]
name = "timewaster"
version = "0.1.0"
authors = ["Martyn <martyn.smith560@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
sha2 = "0.9.1"
colored = "2.0.0"
clap = { version = "4.5.20", features = ["derive"] }
